# ECE1508_Project

./: .gitignore  README.md  Transformer_Stock_prediction.ipynb  compare_all_models.ipynb  compare_lstm_transformer.ipynb  demo.py  environment.yaml  evaluate.py  main.py  percentReturn.ipynb  pyproject.toml  requirements.txt  train.py
notebooks/: Transformer_Stock_prediction.ipynb  compare_all_models.ipynb  compare_lstm_transformer.ipynb
notes/: optuna_transformer_classifier.txt
scripts/: demo.py  main.py
src/ece1508/: __init__.py  data_preparation.py
src/ece1508/lstm/: __init__.py  baseline.py  evaluate.py  lstm_forecaster.py  main.py  train.py
src/ece1508/models/: __init__.py  lstm.py  transformer.py
src/ece1508/transformer/: __init__.py  transformer_model.py
